website/deployment/website-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: java-swing-tutor-website-network-policy
  namespace: java-swing-tutor
spec:
  podSelector:
    matchLabels:
      app: java-swing-tutor-website
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from: [ ]
      ports:
        - protocol: TCP
          port: 80
  egress:
    - to: [ ]
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
    - to: [ ]
      ports:
        - protocol: TCP
          port: 443
